--- a/contents/techtomes/nodejs-mastery/getting-started/nodejs-ecosystem/index.mdx
+++ b/contents/techtomes/nodejs-mastery/getting-started/nodejs-ecosystem/index.mdx
@@ -2,19 +2,19 @@
 
 The Node.js ecosystem is vast and includes tools, libraries, and runtime components that enhance development efficiency. This ecosystem provides essential features that enable developers to build scalable, high-performance applications. Below are the key components of the Node.js ecosystem:
 
-## npm (Node Package Manager)
+## 2.1 NPM (Node Package Manager)
 
-### What is npm?
-npm (Node Package Manager) is the default package manager for Node.js. It provides a centralized repository of JavaScript packages, allowing developers to install, manage, and share reusable code easily. npm simplifies dependency management and streamlines the development process.
+### What is NPM?
+NPM (Node Package Manager) is the default package manager for Node.js. It provides a centralized repository of JavaScript packages, allowing developers to install, manage, and share reusable code easily. NPM simplifies dependency management and streamlines the development process.
 
-### Key Features of npm:
+### Key Features of NPM:
 - **Dependency Management** – Automatically installs, updates, and removes packages.
-- **npm Registry** – Hosts thousands of JavaScript libraries and tools.
+- **NPM Registry** – Hosts thousands of JavaScript libraries and tools.
 - **Version Control** – Allows specifying compatible versions of packages.
-- **Custom Packages** – Developers can create and publish their own npm packages.
+- **Custom Packages** – Developers can create and publish their own NPM packages.
 - **Global and Local Package Installation** – Install packages globally for CLI tools or locally for specific projects.
 
-### How to Use npm:
+### How to Use NPM:
 - Install a package locally:
   ```sh
   npm install package-name
@@ -32,7 +32,7 @@ npm (Node Package Manager) is the default package manager for Node.js. It provid
   npm install express --save
   ```
 
-## The V8 JavaScript Engine
+## 2.2 The V8 JavaScript Engine
 
 ### What is V8?
 V8 is an open-source JavaScript engine developed by Google. It powers both Google Chrome and Node.js, enabling fast execution of JavaScript code by converting it into optimized machine code.
@@ -47,7 +47,7 @@ V8 is an open-source JavaScript engine developed by Google. It powers both Googl
 - Provides access to modern JavaScript features.
 - Continuously optimized by Google for better performance.
 
-## CommonJS vs ECMAScript Modules (ESM)
+## 2.3 CommonJS vs ECMAScript Modules (ESM)
 
 ### CommonJS (`require`)
 CommonJS is the traditional module system used in Node.js.
@@ -94,5 +94,5 @@ export function add(a, b) {
 - Some projects mix both, but this requires careful configuration.
 
 ## Conclusion
-The Node.js ecosystem is rich with tools and technologies that enable developers to build powerful applications. Understanding the core components—**npm, the V8 engine, and module systems (CommonJS vs ESM)**—helps developers make informed decisions when structuring their Node.js applications. These elements together contribute to the scalability, performance, and flexibility of Node.js.
+The Node.js ecosystem is rich with tools and technologies that enable developers to build powerful applications. Understanding the core components—**npm, the V8 engine, and module systems (CommonJS vs ESM)**, helps developers make informed decisions when structuring their Node.js applications. These elements together contribute to the scalability, performance, and flexibility of Node.js.
 
