--- a/contents/techtomes/nodejs-mastery/getting-started/introduction-to-nodejs/index.mdx
+++ b/contents/techtomes/nodejs-mastery/getting-started/introduction-to-nodejs/index.mdx
@@ -105,6 +105,5 @@ REPL is a great tool for experimenting with Node.js features and testing logic w
 
 ## 1.5 Writing and Running Your First Node.js Script
 
-## Overview
+## Conclusion
 Node.js has revolutionized backend development by providing a fast, scalable, and efficient environment for running JavaScript outside the browser. Its event-driven, non-blocking architecture makes it an excellent choice for modern applications. With a strong ecosystem and a unified JavaScript stack, Node.js continues to be a dominant force in web development.
-
