--- a/contents/guides/introduction.mdx
+++ b/contents/guides/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: This section provides an overview of Introduction.
+description: A one-page guide to understand what software engineering is, why it matters, and how to grow in the field.
 ---
 
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam iste dolorum tempore consectetur explicabo tempora provident quia maxime, molestiae, facilis aperiam et, error illum vel ullam? Quis architecto dolore ullam
