--- a/contents/guides/the-beginners-guide-to-software-engineering.mdx
+++ b/contents/guides/the-beginners-guide-to-software-engineering.mdx
@@ -1,5 +1,5 @@
 ---
-title: Introduction
+title: The Beginner’s Guide to Software Engineering
 description: A one-page guide to understand what software engineering is, why it matters, and how to grow in the field.
 ---
 
@@ -9,10 +9,7 @@ Software Engineering is more than just writing code, it is about solving real-wo
 Software Engineering is the process of planning, building, testing, and maintaining software in a structured way. It is not just about writing code but about solving real problems with good systems and teamwork.
 
 ## Programming versus Software Engineering
-Programming is writing code to make something work,
-Software Engineering is designing, building, testing, and maintaining full systems, with teamwork, planning, and best practices.
-Engineering software means doing more than just coding.
-Today, many developers call themselves engineers but building good software takes more than just knowing how to code.
+Programming is writing code to make something work. Software Engineering is designing, building, testing, and maintaining full systems, with teamwork, planning, and best practices. Engineering software means doing more than just coding. Today, many developers call themselves engineers but building good software takes more than just knowing how to code.
 
 ## Why Software Engineering? – The Software Crisis
 In the past, many software projects failed because they were late, didn’t meet user requirements, were buggy, hard to maintain, or too expensive. This became known as the Software Crisis. To fix this, engineering methods were introduced to plan and build software more systematically, similar to construction or electronics. This approach is called the SDLC (Software Development Life Cycle).
@@ -27,8 +24,9 @@ SDLC is the step by step process or phases teams follow to build software the ri
 5. **Testing** – Does it work as expected?
 6. **Maintenance** – Fix bugs, update, and improve over time.
 
-Deep dive into the key phases of SDLC.
-### Requirements Gathering and Analysis - The goal here is to understand what thge client wants.
+**Deep dive into the key phases of SDLC**
+### Requirements Gathering and Analysis - 
+The goal at this phase is to understand what the client wants.
 1. **Requirements Gathering**: This is the first step where information about what the software needs to do is collected. There are different methods to gather these requirements, such as:
 - Surveys and Questionnaires: Asking users for their needs and preferences.
 - Interviews: Direct conversations with users, stakeholders, and experts.
@@ -36,22 +34,169 @@ Deep dive into the key phases of SDLC.
 - Observations: Watching how users interact with current systems or processes.
 - Use Case Analysis: Identifying the specific tasks and goals of the system from the user's perspective.
 
-2. **Requirements Analysis**: Once the requirements are gathered, we analyze them to ensure clarity, feasibility, and alignment with business goals. This step helps us:
+2. **Requirements Analysis**: Once the requirements are gathered, they are analyzed to ensure clarity, feasibility, and alignment with business goals. This step helps us:
 - Define the scope: What will the software do, and what won’t it do?
 - Prioritize features: Which features are most important to the users and business?
 - Ensure feasibility: Can the project be completed on time and within budget? Are the technical requirements achievable?
 
-This phase ensures that the development team fully understands what the system needs to accomplish before moving on to design and development. After this phase, two documents should be produced - 
-- Functional Requirements document: This details the functionality of the system, that is what the system does. It specifies what the software should do to fulfill user needs. These are mostly documented as Use Case Analysis and in recent times after the introduction of Agile methodologie, User Stories. Examples: The system should allow users to log in, search for products, or generate reports.
-- Non Functional Requirements document: Describes the characteristics or properties of the system. It describe system performance, security, usability, scalability, and other quality attributes. Example: The system should be able to handle 1,000 users at the same time, or the response time for a search should be under 2 seconds.
+This phase ensures that the development team fully understands what the system needs to accomplish before moving on to design and development. After this phase, two documents should be produced: 
 
-### Use Case Analysis & User Stories
+- Functional Requirements document: This details the functionality of the system. It specifies what the software should do to fulfill user needs. These are mostly documented as Use Case Analysis and in recent times after the introduction of Agile methodologies, User Stories are created.   
+Example: The system should allow users to log in, search for products, or generate reports.
+
+- Non Functional Requirements document: This describes the characteristics or properties of the system like system performance, security, usability, scalability, and other quality attributes.   
+Example: The system should be able to handle 1,000 users at the same time, or the response time for a search should be under 2 seconds.
+
+#### Use Case Analysis & User Stories
 Use case analysis and user stories are both methods for capturing and expressing requirements in software engineering, but they serve different purposes and are applied at different stages. Use case analysis is a formal, detailed technique typically used in the early phases of a project to define the system's interactions with users. In contrast, user stories are more flexible and informal, commonly used in Agile methodologies to express user needs and guide iterative development.
 
-- Use Case Analysis helps us understand how users interact with a system. It describes who uses the system, what they want to do, and how they do it. It helps define the system’s behavior from the user's point of view. Example:
-Actor: User
-Goal: Log in
-Flow: The user enters their username and password, clicks "Log in," and gains access to their account.
+- Use Case Analysis helps us understand how users interact with a system. It describes who uses the system, what they want to do, and how they do it. It helps define the system’s behavior from the user's point of view. Example:   
+✔ **Actor:** User   
+✔ **Goal:** Log in  
+✔ **Flow:** The user enters their username and password, clicks "Log in," and gains access to their account.   
 
-- User Stories are short, simple descriptions of a feature from the user's perspective.  
-Example: As a user, I want to log in so I can access my account.
+- User Stories are short, simple descriptions of a feature from the user's perspective. Example:    
+✔ **Format:** As a [type of user], I want to [do something] so I can [achieve a goal].  
+As a user, I want to log in so I can access my account.   
+✔ **Acceptance Criteria:** 
+These are the conditions that must be true for the story to be considered complete.  
+  * User sees a login form with email and password fields.
+  * User can submit the form to log in.
+  * If login details are correct, user is redirected to their dashboard.
+  * If details are wrong, user sees an error message.
+  * User sees a "Forgot Password?" link below the form.
+
+### Planning - 
+In the planning phase, the goal is to organize and prepare the project for development. This is where the system’s structure is defined, and key design decisions are made to ensure the project will be maintainable, scalable, and efficient.
+
+**Key Concepts in the Planning Phase:**   
+✔ Modularization   
+The system is broken into smaller, manageable units (modules). This makes it easier to develop, test, and maintain. Each module focuses on a specific task or feature, and can be worked on independently.   
+Example: A shopping cart module, a user authentication module, and a payment gateway module.
+
+✔ High Cohesion   
+Cohesion refers to how closely related the responsibilities of a module are. High cohesion means that the module's components are strongly related to the task it is supposed to perform. It simplifies understanding, maintenance, and testing.   
+Example: A “User” module that handles everything related to user management (login, profile, password reset) should only include functions directly related to users, not unrelated tasks like payment processing.   
+
+✔ Low Coupling   
+Coupling refers to how dependent one module is on another. Low coupling means the modules should be as independent as possible, reducing the risk of changes in one module affecting others. This makes the system more flexible and easier to update.    
+Example: If the “User” module is loosely coupled to the “Payment” module, changes in user management (like adding a new feature) won’t break the payment system.
+
+✔ Mockups and Prototypes   
+During the planning phase, mockups (visual designs) and prototypes (interactive models) are often created to give stakeholders a preview of how the final system will look and work. This helps validate the system design and gather feedback early on.    
+Example: A wireframe of the user interface (UI) showing where buttons, forms, and other elements will appear on a webpage.
+
+This phase sets the foundation for development by defining the system’s architecture, planning how components will interact, and gathering feedback on designs. When high cohesion and low coupling is achieved, it strengthens separation of concerns which increases code readability and maintainability.
+
+### Development -  
+The development phase is where actual coding happens. The focus is on writing efficient, maintainable, and scalable code while following best practices and ensuring the system meets the requirements defined in the planning phase. Here is a breakdown of key practices and tools that help developers during this phase:
+
+✔ Design Patterns   
+Design patterns are proven solutions to common software design problems. They provide templates for solving specific design challenges in a way that ensures flexibility and maintainability.
+Examples:   
+  - Singleton: Ensures a class has only one instance and provides a global point of access.
+  - Observer: Allows one object to notify others when its state changes, typically used for event-driven programming.
+  - Factory: Creates objects without specifying the exact class of object to be created.
+
+✔ Development Principles  
+Good software is not just about features, it is about writing clean, simple, and maintainable code. These principles help developers build better systems, reduce bugs, speed up development, and make teamwork easier:  
+
+  - SOLID Principles: These are five key rules for writing flexible, testable code in object-oriented programming
+  - DRY (Don't Repeat Yourself): Avoid code duplication to reduce errors and make future changes easier. Reuse logic where possible
+  - KISS (Keep It Simple, Stupid): Keep your code simple and easy to understand to avoid unnecessary complexity.
+  - YAGNI (You Aren’t Gonna Need It): Don’t implement features until they are actually needed.
+
+✔ Clean Code   
+Writing clean code means writing code that is simple, easy to read, and easy to maintain. This includes using meaningful variable names, organizing code logically, and removing unnecessary comments.
+Key points for clean code:  
+
+  - Naming Conventions: Use meaningful names that reflect the purpose of variables, functions, and classes.
+  - Code Formatting: Proper indentation and consistent styling make the code easier to read.
+  - Refactoring: Regularly revisit and improve code to make it more efficient and easier to understand.   
+
+✔ Version Control   
+Version control systems (like Git) allow developers to track and manage code changes. It enables collaboration by allowing multiple developers to work on different parts of the codebase without overwriting each other's work.  
+Tools:   
+  - Git: The most commonly used version control system.
+  - GitHub / GitLab / Bitbucket: Platforms that host Git repositories and provide additional features like issue tracking and CI/CD integration.   
+
+✔ Unit Testing   
+Unit testing involves testing individual units or components of the software to ensure they work as expected. Unit tests are automated, making them an essential part of continuous integration and code quality assurance.   
+Example: If you are writing a function that calculates the total price in a shopping cart, a unit test would verify that the function works correctly for various inputs (e.g., different prices, discounts, and quantities).     
+
+✔ Continuous Integration/Continuous Deployment (CI/CD)    
+CI/CD pipelines automate the process of integrating new code changes and deploying them to production. This ensures that the system is always in a deployable state and reduces the time it takes to deliver updates.   
+Tools: Jenkins, Travis CI, CircleCI, GitHub Actions
+
+These practices ensure that the development phase results in software that is reliable, maintainable, and easy to expand. It also ensures collaboration is efficient, and that the system remains functional and bug-free as it evolves. 
+
+### Testing - 
+Testing ensures the software works as expected, is bug-free, and meets user needs. It helps catch issues early, improves quality, and builds trust in the product.   
+
+**Key Concepts in Testing:**   
+✔ TDD (Test-Driven Development): Write tests before writing the actual code. TDD helps you stay focused, write clean code, and catch bugs early.   
+Flow: Write a failing test → Write just enough code to pass the test → Refactor.
+
+✔ Code Coverage  
+Coverage shows how much of your code is tested. High coverage means more parts of your code are verified. It doesn't guarantee bug-free code, but it is a good quality check.
+
+✔ Types of Testing   
+  - Unit Testing: Tests small parts (functions, classes) in isolation.
+  - Integration Testing: Tests how components work together.
+  - System Testing: Tests the entire system as a whole.
+  - Acceptance Testing: Verifies the system meets user requirements.
+  - Regression Testing: Ensures new changes don’t break old features.
+
+✔ Why Testing Matters    
+  - Find bugs early and reduce cost of fixing them.
+  - Improves confidence in code changes.
+  - Helps teams ship faster with fewer issues.
+
+## Tools & Tech Stack
+Software Engineers use different tools and technologies depending on what they are building. The right stack depends on the project’s needs and team preferences. Here is a quick overview:
+
+- Frontend (User Interface) – Tools for building what users see and interact with  
+Examples: HTML, CSS, JavaScript, React, Vue
+
+- Backend (Logic & Data) - Handles the logic, databases, and APIs behind the scenes   
+Examples: Node.js, Express, Python, Django, Java, Spring
+
+- Databases – Store and organize data so the app can read and write information   
+Examples: MongoDB, PostgreSQL, MySQL
+
+- Version Control – Keeps track of code changes, so you can go back in time or work in teams without overwriting each other’s work   
+Examples: Git, GitHub, GitLab
+
+- DevOps & Deployment – Tools for running apps live, automating updates, and managing servers   
+Examples: Docker, GitHub Actions, Netlify, Vercel, AWS
+
+- Collaboration – Helps teams plan, communicate, and stay organized   
+Examples: Jira, Trello, Slack, Notion
+
+## Career Paths in Software Engineering
+There are many roles in software engineering. Each one focuses on a different part of building or maintaining software. You can start in one area and grow into others as you gain more experience:
+
+- Frontend Developer – Builds the user interface of websites and apps.
+- Backend Developer – Works on the server, database, and logic behind the app.
+- Full-Stack Developer – Handles both frontend and backend tasks.
+- DevOps Engineer – Automates testing, deployment, and server setup.
+- QA Engineer – Tests the app to find and fix bugs before users do.
+- Mobile Developer – Builds apps for phones and tablets (Android or iOS).
+- Data Engineer / AI Engineer – Works with data systems, ML models, or AI-powered apps.
+- Software Architect – Plans the structure and design of complex systems.
+- Engineering Manager – Leads a team of developers and makes technical decisions.
+
+## How to Grow as a Software Engineer
+Growing as a software engineer takes time, practice, and curiosity. It is a journey, focus on learning every day. Here’s how to keep improving:
+
+- Keep Learning – Tech changes fast. Read docs, take courses, and follow new trends.
+- Build Projects – Practice by solving real problems. Start small and grow.
+- Read Code – Learn from others by reading open-source projects.
+- Ask Questions – Don’t be afraid to ask for help. It is how you grow faster.
+- Write Clean Code – Focus on simplicity, structure, and readability.
+- Work with Others – Join teams, contribute to open source, or find a mentor.
+- Stay Curious – Try new tools, explore new fields, and challenge yourself.
+
+## Final Thoughts
+> **Software Engineering is a journey from writing code to solving real-world problems.**  
+> It's not just about syntax, it’s about thinking like a problem solver, designing systems that are clear, scalable, and dependable. Shifting from 'just coding' to 'engineering solutions' takes practice, curiosity, and purpose. Remember, every great engineer once started as a curious beginner.
