--- a/contents/techtomes/nodejs-mastery/nodejs-fundamentals/javascript-vs-nodejs/index.mdx
+++ b/contents/techtomes/nodejs-mastery/nodejs-fundamentals/javascript-vs-nodejs/index.mdx
@@ -21,14 +21,14 @@ JavaScript was originally designed to run in the **browser** to enhance user int
 
 Here are some key technical distinctions:
 
-### Frontend JavaScript:
+### Frontend JavaScript
 
 - Can manipulate the DOM
 - Used for animations, event handling, User Interface logic
 - Limited access to the system for security reasons
 - Works with `window`, `document`, `fetch`, etc.
 
-### Node.js:
+### Node.js
 
 - Cannot access the DOM or `window`
 - Can read/write files, access databases, and start HTTP servers
@@ -40,7 +40,7 @@ Here are some key technical distinctions:
   - `events` for handling events
     and much more.
 
-### Example:
+### Example
 
 ```javascript
 // Node.js - Reading a file
